# transform-myd-minimal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_OPTIONS.md  DEVELOPMENT.md  FRONTEND_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOGGING.md  QA_SETUP_SUMMARY.md  QA_VERIFICATION_PROOF.txt  README.md  ROLLBACK_QA.md  USAGE.md  central_mapping_memory.yaml  cli.py  config.yaml  config_backup.yaml  create_error_xlsx.py  create_test_xlsx.py  create_test_xml.py  dev_bootstrap.py  generate_yaml_files.py  generator.py  main.py  pyproject.toml  requirements.txt  synonym.py  transform-myd-minimal  transform_myd_minimal.py
.copilot/: README.md  instructions.md  quickstart.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: central_mapping_memory.yaml  config.yaml  mapping.yaml  object_list.yaml  targets.yaml
config/m120/cepc/: column_map.yaml  fields.yaml  value_rules.yaml
config/m140/bnka/: column_map.yaml  fields.yaml  value_rules.yaml
configs/: central_mapping_memory.yaml  config.yaml
data/01_source/: .gitkeep  test_casetest.csv  test_edge_cases.csv  test_extra_cols.csv  test_invalid.csv
data/01_template/: S_BNKA#FreeText_Mandatory.csv  S_CEPC#FreeText_Mandatory.csv
data/02_fields/: BNKA_headers.xlsx  Source data for Bank.xml  fields_m120_cepc.xlsx  fields_m140_bnka.xlsx
data/02_target/: .gitkeep  fulltest_bnka.xml  index_target_m120_cepc.xml  index_target_m140_bnka.xml  index_target_m143_bnka.xml  index_target_nomatch_nomatch.xml  index_target_noworksheet_test.xml  index_target_valid_valid.xml  m140_bnka.xml  test_bnka.xlsx
data/03_index_source/: .gitkeep  index_source_20250923_0423.json  index_source_20250924_0828.html  index_source_20250924_0828.json
data/03_template/: S_CEPC_BUKRS#FreeText.csv
data/03_templates/: S_BNKA#template.csv  S_BNKA#test_template.csv.bak
data/04_index_target/: .gitkeep  index_target_20250923_0428.html  index_target_20250924_0828.html  index_target_20250924_0828.json
data/04_raw/: test_bnka.xlsx
data/05_map/: .gitkeep  mapping_20250923_0430.html  mapping_20250923_0430.json  mapping_20250923_0438.html  mapping_20250923_0438.json  mapping_20250924_0828.html  mapping_20250924_0828.json  test_bnka_mapping_report_20251006_1022.html  test_bnka_mapping_report_20251006_1022.json
data/05_raw_validation/: raw_validation_test_bnka_20250923_0831.json
data/06_template/: .gitkeep  S_AUFK#FreeText_Mandatory.csv  S_BNKA#FreeText_Mandatory.csv  S_BNKA#template.csv  S_CEPC#FreeText_Mandatory.csv  S_CEPC_BUKRS#FreeText.csv  Source data for Bank.xml
data/07_raw/: .gitkeep
data/08_raw_validation/: .gitkeep  raw_validation_test_bnka_20250923_0831.html  raw_validation_test_bnka_20250924_0829.json  raw_validation_test_bnka_20251006_1020.csv  raw_validation_test_bnka_20251006_1020.html  raw_validation_test_bnka_20251006_1020.json  raw_validation_test_bnka_20251006_1022.html  raw_validation_test_bnka_20251006_1022.json
data/08_transformed_validation/: post_transform_validation_test_bnka_20250923_0831.html  post_transform_validation_test_bnka_20250923_0831.json
data/09_logging/: index_source_test_bnka_20250923_0830.jsonl  index_source_test_test_20250923_1041.jsonl  index_target_test_bnka_20250923_0830.jsonl  map_test_bnka_20250923_0828.jsonl  map_test_bnka_20250923_0830.jsonl  map_test_bnka_20250923_0831.jsonl
data/09_rejected/: .gitkeep
data/10_transformed/: .gitkeep  S_BNKA#test_20250923_0831_output.csv  S_BNKA#test_20250924_0829_output.csv  S_BNKA#test_20251006_1020_output.csv
data/11_transformed_validation/: .gitkeep  post_transform_validation_test_bnka_20250924_0829.json  post_transform_validation_test_bnka_20251006_1020.html  post_transform_validation_test_bnka_20251006_1020.json  post_transform_validation_test_bnka_20251006_1022.html  post_transform_validation_test_bnka_20251006_1022.json
data/99_logging/: .gitkeep
data/config/: object_list.yaml
docs/: CHANGELOG.md  CLI_OPTIONS.md  CONTRIBUTING.md  DEVELOPMENT.md  DIRECTORY_STRUCTURE.md  FRONTEND.md  LOGGING.md  MAPPING_UX_GUIDE.md  QA_SETUP_SUMMARY.md  SETUP.md  USAGE.md
migrations/: SCHEMA.md  mapping_editor_template.xlsx  object_list.yaml  objects.yaml
migrations/M120/cepc/: fields.yaml  mappings.yaml  transformations.yaml  validation.yaml
migrations/M140/bnka/: fields.yaml  mappings.yaml  transformations.yaml  validation.yaml
migrations/broken/bnka/: index_target.yaml  validation.yaml
migrations/comments/bnka/: index_target.yaml  validation.yaml
migrations/control/bnka/: index_target.yaml  validation.yaml
migrations/demo/bnka/: index_target.yaml  validation.yaml
migrations/demo2/bnka/: index_target.yaml  validation.yaml
migrations/f100/aufk/: index_source.yaml  index_target.yaml  mapping.yaml  transform.yaml  validation.yaml
migrations/fulltest/bnka/: index_target.yaml  transform.yaml  validation.yaml
migrations/m120/cepc/: index_source.yaml  index_target.yaml  mapping.yaml  validation.yaml
migrations/m120/cepc_bukrs/: index_source.yaml  index_target.yaml  mapping.yaml  validation.yaml
migrations/m140/bnka/: index_source.yaml  index_target.yaml  mapping.yaml  transform.yaml  validation.yaml  validation.yaml.backup
migrations/m141/bnka/: index_source.yaml  index_target.yaml  mapping.yaml
output/: mapping.yaml  targets.yaml
scripts/: README.md  auto_suggest_mapping.py  mapping_editor_webui.py  transform-myd-minimal  transform-myd-minimal.bat  transform-myd-minimal.ps1
src/tmm/: __init__.py  cli.py
src/transform_myd_minimal/: __init__.py  __main__.py  cli.py  config_loader.py  csv_reporting.py  enhanced_logging.py  frontend.py  fuzzy.py  generator.py  logging_config.py  main.py  parsers.py  reporting.py  schema.py  source_mapping.py  synonym.py
test_output/: object_list.yaml
tests/: sample_mapping_testcases.yaml  test_central_mapping_memory.py  test_cli.py  test_cli_integration.py  test_csv_reporting.py  test_data_profiling.py  test_directory_fix.py  test_frontend.py  test_html_reporting.py  test_mapping.py  test_schema_validation.py  test_transform_yaml_generation.py
(+26 files in other folders)
