[project]
name = "transform-myd-minimal"
version = "3.0.0"
description = "CLI tool for generating column mapping and YAML files from Excel field definitions for SAP data migration workflows"
authors = [
    {name = "Transform MYD Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["sap", "migration", "field-mapping", "yaml", "excel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Office/Business",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
    "lxml>=5.2",
    "python-dateutil>=2.9",
    "rapidfuzz>=3.9",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "black>=24.8",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
]

[project.scripts]
transform-myd-minimal = "tmm.cli:app"

[project.urls]
Homepage = "https://github.com/viggomeesters/transform-myd-minimal"
Repository = "https://github.com/viggomeesters/transform-myd-minimal"
Issues = "https://github.com/viggomeesters/transform-myd-minimal/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]